[fix] swaggerのAPIドキュメントの見直し. 見直しに合わせてschemaの見直し.
