# app/controller/users.js
@@ -3,7 +3,7 @@ const {
   REGISTER_SCHEMA,
   UPDATE_SCHEMA,
   ENTRY_SCHEMA,
-  OUT_SCHEMA,
+  EXIT_SCHEMA,
   USERS_SCHEMA,
 } = require('./schema/users');
 
@@ -17,8 +17,6 @@ const {
   entry,
   findByDate,
 } = require('../repository/visitor');
-
-const PURPOSE = require('../common/constraint/purpose');
 
 // TODO: 別のファイルに切り出す.
 const SUCCESS_STATUS = 200;
@@ -58,15 +56,6 @@ module.exports = async function(fastify, opt, next) {
   });
 
   fastify.post('/entry', ENTRY_SCHEMA, async (req, reply) => {
-    if(!PURPOSE.includes(req.body.purpose)) {
-      reply
-        .code(VALIDATED_OR_FAILED_CODE)
-        .send({
-          error: 'validation error.',
-          message: '適切な目的が選択されていません。',
-          statusCode: VALIDATED_OR_FAILED_CODE,
-        });
-    }
 
     const response = await createResponseDate(entry, req.body, CREATED_STATUS, VALIDATED_OR_FAILED_CODE);
     reply
@@ -81,7 +70,7 @@ module.exports = async function(fastify, opt, next) {
       .send(response.data);
   });
 
-  fastify.post('/exit', OUT_SCHEMA, async (req, reply) => {
+  fastify.post('/exit', EXIT_SCHEMA, async (req, reply) => {
     const response = await createResponseDate(exit, req.body, SUCCESS_STATUS, VALIDATED_OR_FAILED_CODE);
     reply
       .code(response.status)
